--- a/index.html
+++ b/index.html
@@ -4,27 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Will You Be My Valentine?</title>
-    <meta name="description" content="A cute, funny, and romantic Valentine invite.">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <main class="card" role="main">
-        <div class="badge">Official Valentine Proposal Form</div>
-        <h1>Hi Priscilla, will you be my Valentine?</h1>
-        <p class="subtitle">I brought snacks, emotional support, and unlimited compliments.</p>
+    <div class="container">
+        <h1>Will you be my Valentine? 💘</h1>
         <div class="buttons">
-            <button id="yesButton" class="yes-button" type="button">Yes, obviously</button>
-            <button id="noButton" class="no-button" type="button">Nope</button>
+            <button class="yes-button" onclick="handleYesClick()">Yes ✨</button>
+            <button class="no-button" onclick="handleNoClick()">No 🙈</button>
         </div>
-        <p id="status" class="status" aria-live="polite"></p>
         <div class="gif_container">
-            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute animated cat" loading="lazy" decoding="async">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
         </div>
-        <p class="fineprint">*This form is legally binding in the court of cuddles.</p>
-    </main>
+        <p class="caption">Guaranteed butterflies. 🦋</p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
