--- a/yes_page.html
+++ b/yes_page.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">I Knew you would say yes😍. You are the best🫂😘😘💖</h1>
+        <h1 class="header_text">Thank you my love🥺💕</h1>
+<h2 class="container">Every day with you feels a little brighter, a little warmer, and a lot happier 🌸
+You make my heart smile in ways I never knew were possible 🥰
+Thank you for your love, your kindness, your laughs, and even the little moments we share 💫
+I’m so grateful to have you, today and always ❤️
+You’re my favorite person, my safe place, and my biggest blessing 💌
+
+Forever yours 😘💞</h2>
         <div class="gif_container">
             <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif">
         </div>
